# nezabudu_v3

./: .gitignore  alembic.ini  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 4e8a55821ac5_.py  7ffe1186fb94_.py
bot/: actions.py  comands.py  state_groups.py
bot/dandlers/: cmd.py
bot/dialogs/: list_reminders_dialog.py  main_dialog.py  settings_dialog.py
bot/handlers/: add_reminder_handlers.py  cmd.py  delay_remind_hahdlwers.py  delete_reminder_handlers.py  edit_reminder_handlers.py  send_message_handlers.py  send_remind_hendlers.py
bot/keyboards/: delay_keyboard.py  delay_keyboards.py  delete_or_edit_reminder_keyboard.py
db/: db_actions.py
models/: __init__.py  models.py  task.py  user.py
parser_v2/: every.py  in_date.py  parse.py  through.py  utils.py
parser_v3/: every.py  in_date.py  parse.py  through.py  utils.py
scheduler/: scheduler_actions.py
text_responses/: reminder_info.py
utils/: reminder_info.py
