[tool.poetry]
name = "nezabudu-v3"
version = "0.1.0"
description = ""
authors = ["daboggg <vzinin@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.10.4"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
aiogram = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
