[tool.poetry]
name = "nezabudu-v3"
version = "0.1.0"
description = ""
authors = ["daboggg <vzinin@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
apscheduler = "^3.10.4"
python-dateutil = "^2.8.2"
aiogram-dialog = "^2.1.0"
environs = "^10.3.0"
aiosqlite = "^0.20.0"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
speechrecognition = "3.8.1"
soundfile = "0.12.1"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
aiogram = "^3.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
